--- a/package.json
+++ b/package.json
@@ -1,59 +1,30 @@
 {
-  "name": "react-drag-guide-lines",
-  "version": "1.0.0",
-  "description": "Adds guide lines to react draggable components",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KarrthikReddyChinasani/react-drag-guide-lines.git"
-  },
-  "scripts": {
-    "build": "rm -rf dist && yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "test": "jest --config jestconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
-  },
-  "keywords": [
-    "react",
-    "guide-lines",
-    "drag",
-    "typescript"
-  ],
-  "author": "Karthik Reddy (KarrthikReddyChinasani) & Shehzadi",
-  "license": "MIT",
-  "devDependencies": {
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.7",
-    "@types/react": "^18.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^28.1.3",
-    "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^28.1.3",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-jest": "^28.0.8",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0"
-  },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ]
+    "name": "react-drag-guide-lines-example",
+    "version": "0.1.0",
+    "description": "Demo page of react-drag-guide-lines",
+    "scripts": {
+        "start": "parcel src/index.html",
+        "build": "parcel build src/index.html --dist-dir docs --public-url .",
+        "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/KarrthikReddyChinasani/react-drag-guide-lines.git"
+    },
+    "author": "KarrthikReddyChinasani & Qurrath Shehzadi",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.5",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "eslint": "^8.18.0",
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "parcel": "^2.6.2",
+        "process": "^0.11.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^4.7.4"
+    }
 }
