--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "drag",
     "typescript"
   ],
-  "author": "Karthik Reddy (KarrthikReddyChinasani) & Shehzadi",
+  "author": "Karthik Reddy (KarrthikReddyChinasani) & Qurrath Shehzadi",
   "license": "MIT",
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
