--- a/example/package.json
+++ b/example/package.json
@@ -12,10 +12,8 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-guide-lines": "^1.0.0",
     "react-rnd": "^10.3.7",
     "uniqolor": "^1.0.2"
-  },
-  "dependencies": {
-    "react-drag-guide-lines-test": "^1.0.0"
   }
 }
