update package.json code

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "process": "^0.11.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "typescript": "^4.7.4"
+        "react-drag-guide-lines": "^1.0.0",
+        "react-rnd": "^10.3.7",
+        "typescript": "^4.7.4",
+        "uniqolor": "^1.0.2"
     }
 }
